[project]
name = "temporal-history-action-count"
version = "0.1.0"
description = "Analyze Temporal workflow history files and count billable actions"
readme = "README.md"
authors = [
    {name = "Steve Androulakis", email = "steve@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8.1"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/steveandroulakis/temporal-history-action-count"
Repository = "https://github.com/steveandroulakis/temporal-history-action-count"
Issues = "https://github.com/steveandroulakis/temporal-history-action-count/issues"

[project.scripts]
temporal-billable = "temporal_history_action_count.billable_actions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "F541"]
exclude = [".venv", "build", "dist"]